# OpenglLearn

./: CMakeLists.txt  glad.c  main.cpp
application/: Application.cpp  Application.h
glFramework/: Shader.cpp  Shader.h
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
